--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -41,20 +41,20 @@
           <b>
             <label for="nome" class="form-label">Nome completo:</label>
           </b>
-          <input value="teststetetsts" required class="form-control col-md-12" type="text"
+          <input required class="form-control col-md-12" type="text"
             placeholder="Digite seu nome completo" [(ngModel)]="usuario.nomeCompleto" name="usuario.nomeCompleto">
 
           <br>
 
           <b><label for="email" class="form-label">Email:</label></b>
-          <input value="teste@teste.com" required type="email" class="form-control col-md-10" id="email" aria-describedby="email"
+          <input required type="email" class="form-control col-md-10" id="email" aria-describedby="email"
             placeholder="Digite seu e-mail" name="email" [(ngModel)]="usuario.email">
           <div id="emailHelp" class="form-text">Nunca compartilharemos seu e-mail com mais ninguém.</div>
 
           <br>
 
           <b><label for="senha" class="form-label">Nova senha:</label></b>
-          <input value="teste12345" required type="password" class="form-control col-md-8" id="senha" aria-describedby="senhaHelp"
+          <input required type="password" class="form-control col-md-8" id="senha" aria-describedby="senhaHelp"
             maxlength="20" name="senha" [(ngModel)]="usuario.senha">
           <div id="senhaHelp" class="form-text"></div>
           <span id="senhaHelpInline" class="form-text">
@@ -66,7 +66,7 @@
           <b>
             <label for="confirmaSenha" class="form-label">Confirme a senha:</label>
           </b>
-          <input value="teste12345" required type="password" class="form-control col-md-8" id="confirmaSenha" minlength="8"
+          <input required type="password" class="form-control col-md-8" id="confirmaSenha" minlength="8"
             aria-describedby="confirmaSenhaHelp" name="confirmaSenha" [(ngModel)]="usuario.confirmaSenha">
 
           <br>
@@ -74,7 +74,7 @@
           <b>
             <label for="whatsapp" class="form-label">Número Whatsapp:</label>
           </b>
-          <input value="000000000" required type="number"
+          <input required type="number"
           class="form-control col-md-8"
           id="whatsapp"
           aria-describedby="whatsappHelp"
@@ -87,7 +87,7 @@
           <b>
             <label>Data nascimento:</label>
           </b>
-          <input value="1992-11-13" required type="date" class="form-control col-md-7" style="width: 40%" id="dataAniversario"
+          <input required type="date" class="form-control col-md-7" style="width: 40%" id="dataAniversario"
             aria-describedby="dataAniversario" placeholder="dd / mm / aaaa" name="dataAniversario"
             [(ngModel)]="usuario.dataAniversario">
 
@@ -119,7 +119,7 @@
 
           <div class="cadastroStyle col-md-9">
             <b><label for="descricaoBio" class="form-label">Descrição bio:</label></b>
-            <input value="teste" required type="text" class="form-control col-md-12" id="descricaoBio"
+            <input required type="text" class="form-control col-md-12" id="descricaoBio"
               aria-describedby="descricaoBiopHelp" name="descricaoBio" [(ngModel)]="usuario.descricaoBio">
             <div id="descricaoHelp" class="form-text"></div>
           </div>
@@ -132,8 +132,8 @@
           <div *ngFor="let d of usuario.interesses;let i = index; trackBy:trackByfn">
             <div class="form-inline">
               <b><label style="margin-right: 10px;">{{i + 1}}:</label></b>
-              <input value="teste" required type="text" class="form-control col-md-8" id="{{i}}" aria-describedby="interessesHelp"
-                placeholder="Esportes" name="{{i}}" value="usuario.interesses[i]" [(ngModel)]="usuario.interesses[i]">
+              <input required type="text" class="form-control col-md-8" id="{{i}}" aria-describedby="interessesHelp"
+                placeholder="Esportes" name="{{i}}" [(ngModel)]="usuario.interesses[i]">
             </div>
 
             <br>
@@ -169,9 +169,9 @@
           <div *ngFor="let d of usuario.educacao; let i = index; trackBy:trackByfn">
             <div class="form-inline">
               <b><label style="margin-right: 10px;">{{i + 1}}:</label></b>
-              <input value="teste" required type="text" class="form-control col-md-8" id=educacao{{usuario.educacao[i]}}
+              <input required type="text" class="form-control col-md-8" id=educacao{{usuario.educacao[i]}}
                 aria-describedby="interessesHelp" style="width: 350px;" placeholder="Nível de ensino" name=educacao{{i}}
-                value="usuario.educacao[i]" [(ngModel)]="usuario.educacao[i]">
+                 [(ngModel)]="usuario.educacao[i]">
             </div>
             <br>
           </div>
@@ -216,7 +216,7 @@
 
           <div class="form-group col-md-9">
             <b><label for="cidade" class="form-label">Cidade:</label></b>
-            <input value="teste" required type="text" class="form-control" id="cidade" aria-describedby="cidadeHelp">
+            <input required type="text" class="form-control" id="cidade" aria-describedby="cidadeHelp">
             <div id="cidadeHelp" class="form-text"></div>
           </div>
 
@@ -224,7 +224,7 @@
             <b>
               <label for="uf" class="form-label card-size">UF:</label>
             </b>
-            <input value="teste" required type="text" class="form-control" id="uf" aria-describedby="ufpHelp">
+            <input required type="text" class="form-control" id="uf" aria-describedby="ufpHelp">
             <div id="ufHelp" class="form-text"></div>
           </div>
 
@@ -236,7 +236,7 @@
                 Nacionalidade:
               </label>
             </b>
-            <input value="teste" required type="text" class="form-control" id="nacionalidade" aria-describedby="nacionalidadepHelp"
+            <input required type="text" class="form-control" id="nacionalidade" aria-describedby="nacionalidadepHelp"
               placeholder="Brasileiro">
             <div id="nacionalidadeHelp" class="form-text"></div>
           </div>
@@ -245,14 +245,14 @@
 
           <div class="form-group col-md-7">
             <b><label for="cep" class="form-label">CEP:</label></b>
-            <input value="000000" required type="number" class="form-control" id="cep" aria-describedby="ceppHelp">
+            <input required type="number" class="form-control" id="cep" aria-describedby="ceppHelp">
             <div id="cepHelp" class="form-text"></div>
           </div>
           <br>
 
           <div class="form-group col-md-7">
             <b><label for="rua" class="form-label">Rua:</label></b>
-            <input value="teste" required type="text" class="form-control" id="rua" aria-describedby="ruapHelp">
+            <input required type="text" class="form-control" id="rua" aria-describedby="ruapHelp">
             <div id="ruaHelp" class="form-text"></div>
           </div>
 
@@ -262,14 +262,14 @@
             <b>
               <label for="numero" class="form-label">Número:</label>
             </b>
-            <input value="000000" required type="number" class="form-control" id="numero" aria-describedby="numeropHelp">
+            <input required type="number" class="form-control" id="numero" aria-describedby="numeropHelp">
           </div>
 
           <br>
 
           <div class="form-group col-md-8">
             <b><label for="bairro" class="form-label">Bairro:</label></b>
-            <input value="teste" required type="text" class="form-control" id="bairro" aria-describedby="bairropHelp">
+            <input required type="text" class="form-control" id="bairro" aria-describedby="bairropHelp">
             <div id="bairroHelp" class="form-text"></div>
           </div>
 
@@ -277,7 +277,7 @@
 
           <div class="form-group col-md-7">
             <b><label for="comlemento" class="form-label">Comlemento:</label></b>
-            <input value="teste" required type="text" class="form-control" id="comlemento" aria-describedby="comlementopHelp"
+            <input required type="text" class="form-control" id="comlemento" aria-describedby="comlementopHelp"
               placeholder="Casa, apartamento, condomínio...">
             <div id="comlementoHelp" class="form-text"></div>
           </div>
